// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player.vue renders a black player 1`] = `
<div
  class="player"
>
  <stone-stub
    class="player-stone player-stone-black"
    color="black"
  />
   
  <div
    class="player-score"
  >
    0
  </div>
   
  <!---->
   
  <!---->
   
  <div
    class="player-status"
  />
</div>
`;

exports[`Player.vue renders a white player 1`] = `
<div
  class="player"
>
  <stone-stub
    class="player-stone player-stone-white"
    color="white"
  />
   
  <div
    class="player-score"
  >
    10
  </div>
   
  <!---->
   
  <!---->
   
  <div
    class="player-status"
  />
</div>
`;

exports[`Player.vue renders a white player who has to play 1`] = `
<div
  class="player"
>
  <stone-stub
    class="player-stone player-stone-white"
    color="white"
  />
   
  <div
    class="player-score"
  >
    10
  </div>
   
  <div
    class="player-status player-status--play"
  >
    
    Your turn
  
  </div>
   
  <!---->
   
  <!---->
</div>
`;

exports[`Player.vue renders a white player who has won 1`] = `
<div
  class="player"
>
  <stone-stub
    class="player-stone player-stone-white"
    color="white"
  />
   
  <div
    class="player-score"
  >
    10
  </div>
   
  <!---->
   
  <div
    class="player-status"
  >
    You win!
  </div>
   
  <!---->
</div>
`;
